# curpare

./: .env  .gitignore  Cargo.toml  README.md  example.toml  meta_data.rs  shell.nix
.github/workflows/: rust.yml
examples/: .env  example-with-env-toml  example.toml  extended-example.toml  simple-example.toml
src/: args.rs  client.rs  main.rs  meta_data.rs  url_data.rs
src/client/: clients.rs  meta_data.rs  mod.rs  request.rs  response.rs
