[package]
name = "curpare"
version = "0.1.0"
edition = "2024"
author = "Emad Ali"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde-html = "0.0.1"
serde_json = "1.0.140"
tempfile = "3.20.0"
term_size = "0.3.2"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
