[package]
name = "curpare"
version = "0.1.0"
edition = "2024"
authors = ["Emad Ali"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Mclilzee/curpare"
homepage = "https://github.com/Mclilzee/curpare"
keywords = ["curl", "compare", "requests", "responses", "diff"]
description = """
Takes multiple web links and compare their results between eachother
"""

[dependencies]
anyhow = "1.0.98"
bat = "0.25.0"
clap = { version = "4.5.37", features = ["derive"] }
dotenv = "0.15.0"
indicatif = "0.17.11"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
term_size = "0.3.2"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.23"
